2012-03-07 Dario Rodriguez <dario.rodriguez@artica.es>

	*include/functions_incidents.php,
	include/functions_db.php: Fixed search statistics report that
	works wrong and added a better visual style.

2012-03-06 Dario Rodriguez <dario.rodriguez@artica.es>

	*operation/incidents_simple/incidents.php,
	operation/side_menu.php: Fixed an error in ACL disallowing users to
	create incidents when they have flag IW.

2012-03-06 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/incidents/incident_detail.php: Fixed a bug related to
	ACL that disabled the incident edition for incident owners.

2012-03-06 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/incidents/incident.php: Fixed an error that tried to
	send an email using incident data after the incident was deleted.

2012-03-06 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/incidents/incident_detail.php: Consolidate the 
	fix for the updating error because the same field was printed
	with different names.

2012-03-06 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/incidents/incident_detail.php: Fixed an error 
	updating description field whe the user has Incident Operator
	profile

2012-03-06 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/side_menu.php: Fixed an ACL problem with new
	ticket creation with IR and IW flags.

2012-03-05 Sancho Lerena <slerena@artica.es>

	* include/config_process.php: Update version.

	* operation/user_report/report_monthly.php,
	godmode/usuarios/lista_usuarios.php: Some format/visual fixes.


2012-03-02 Sancho Lerena <slerena@artica.es>

	* include/functions_api.php
        include/api.php: API to create users

2012-02-27 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/incidents_simple/incident_new.php: Added form
	validation to control incidents creation with empty title.
	* operation/side_menu.php: Added a control to show New ticket
	option in simple incident view only when user has IM flag.
